--- a/package.json
+++ b/package.json
@@ -13,14 +13,22 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/typography": "^0.5.13",
+		"autoprefixer": "^10.4.19",
+		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.4",
 		"svelte": "^4.2.7",
-		"vite": "^5.0.3",
 		"tailwindcss": "^3.4.4",
-		"postcss": "^8.4.38",
-		"autoprefixer": "^10.4.19",
-		"prettier-plugin-tailwindcss": "^0.6.4"
+		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"bits-ui": "^0.21.10",
+		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.396.0",
+		"tailwind-merge": "^2.3.0",
+		"tailwind-variants": "^0.2.1"
+	}
 }
